--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       <a class="link" href="https://www.instagram.com/miguel.gandia" target="_blank">
         <i class="fab fa-instagram">&nbsp;</i> Instagram
       </a>
-      <a class="link" href="https://twitter.com/_Maiquel3000_" target="_blank">
+      <a class="link" href="https://twitter.com/Maiquel3000" target="_blank">
         <i class="fab fa-twitter">&nbsp;</i> Twitter
       </a>
       <a class="link" href="https://myanimelist.net/profile/Maiquel3000" target="_blank">
