--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       <a class="link" href="https://www.tiktok.com/@maiquel3000" target="_blank">
         <i class="fab fa-tiktok">&nbsp;</i>Tiktok
       </a>
-      <a class="link" href="https://discord.com/invite/sCRCcm2X" target="_blank">
+      <a class="link" href="https://discord.gg/uB94EFCXfG" target="_blank">
         <i class='fab fa-discord'></i> Discord
       </a>
       <a class="link" href="https://www.facebook.com/Maiquel3000" target="_blank">
