--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     </div>
 
     <div id="links">
-      <a class="link" href="https://www.youtube.com/c/Maiquel3000" target="_blank">
+      <a class="link" href="https://www.youtube.com/c/MaiquelHytale" target="_blank">
         <i class="fab fa-youtube">&nbsp;</i> Youtube
       </a>
       <a class="link" href="https://www.twitch.tv/Maiquel3000" target="_blank">
