--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Maiquel3000 | Linktree</title>
+    <title>Maiquel | Linktree</title>
     <!-- Favicon -->
-    <link rel="icon" href="https://yt3.ggpht.com/ytc/AMLnZu9Hoa8-gbGsv3UzbklNof4Spp9XMHz-o2lvbUXI2A=s88-c-k-c0x00ffffff-no-rj" type="image/x-icon" />
+    <link rel="icon" href="https://i.scdn.co/image/ab6761610000939b0e1ddb3b114fce4f2e46b637" type="image/x-icon" />
     <!-- Font Awesome icons -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css">
     <!-- Core theme CSS -->
@@ -39,36 +39,24 @@
     </div>
 
     <div id="userName">
-      Maiquel3000
+      Maiquel
     </div>
 
     <div id="links">
-      <a class="link" href="https://www.youtube.com/c/Maiquel3000" target="_blank">
+      <a class="link" href="https://www.youtube.com/@Maiquel3k" target="_blank">
         <i class="fab fa-youtube">&nbsp;</i> Youtube
       </a>
             <a class="link" href="https://open.spotify.com/artist/6CASqqlURsnmzyOcDteVKp?si=HxOm5o7QRYSipejOgyr8qw" target="_blank">
         <i class="fab fa-spotify">&nbsp;</i> Spotify
       </a>
-      <a class="link" href="https://www.twitch.tv/Maiquel3000" target="_blank">
-        <i class="fab fa-twitch">&nbsp;</i> Twitch
-      </a>
-      <a class="link" href="https://www.tiktok.com/@maiquel3000" target="_blank">
+      <a class="link" href="https://www.tiktok.com/@maiquel3k" target="_blank">
         <i class="fab fa-tiktok">&nbsp;</i>Tiktok
       </a>
-      <a class="link" href="https://discord.gg/uB94EFCXfG" target="_blank">
-        <i class='fab fa-discord'></i> Discord
-      </a>
-      <a class="link" href="https://www.facebook.com/Maiquel3000" target="_blank">
-        <i class="fab fa-facebook">&nbsp;</i> Facebook
-      </a>
-      <a class="link" href="https://www.instagram.com/miguel.gandia" target="_blank">
+      <a class="link" href="https://www.instagram.com/maiquel3k" target="_blank">
         <i class="fab fa-instagram">&nbsp;</i> Instagram
       </a>
-      <a class="link" href="https://twitter.com/Maiquel3000" target="_blank">
+      <a class="link" href="https://twitter.com/Maiquel3k" target="_blank">
         <i class="fab fa-twitter">&nbsp;</i> Twitter
-      </a>
-      <a class="link" href="https://myanimelist.net/profile/Maiquel3000" target="_blank">
-        <i class="fa fa-play-circle">&nbsp;</i> MyAnimeList
       </a>
     </div>
 
@@ -76,7 +64,7 @@
 
 
     <div id="hashtag">
-      Maiquel3000
+      Maiquel3k
     </div>
   </body>
 </html>
